MDEV-5996 - fix odd behaviour of some combinations of table and database names